# Wegent-ai

./: .env.example  .gitignore  AGENTS.md  README.md  README_zh.md  UPSTREAM_SYNC.md  docker-compose.yml  install.sh  pyproject.toml  start.sh
backend/: .env.example  migrate_encrypt_tokens.py  pyproject.toml  pytest.ini
backend/alembic/backup_conflicted_migrations/: q7r8s9t0u1v2_add_flow_tables.py  q7r8s9t0u1v2_add_projects_tables.py  r8s9t0u1v2w3_add_summary_to_knowledge_documents.py  r8s9t0u1v2w3_add_webhook_secret_to_flows.py  s9t0u1v2w3x4_add_version_to_flow_executions.py
backend/alembic/versions/: q7r8s9t0u1v2_add_projects_tables.py  q7r8s9t0u1v2_add_summary_to_knowledge_documents.py  s9t0u1v2w3x4_merge_projects_and_summary.py  t0u1v2w3x4y5_add_flows_and_flow_executions_tables.py  u1v2w3x4y5z6_rename_flow_to_subscription.py  v2w3x4y5z6a7_add_subscription_follow_tables.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/core/: celery_app.py  circuit_breaker.py  config.py  constants.py  dead_letter_queue.py  distributed_lock.py  embedded_celery.py  logging.py  security.py  yaml_init.py
backend/app/db/: session.py
backend/app/models/: __init__.py  knowledge.py  project.py  subscription.py  subscription_follow.py  task.py  user.py
backend/app/repository/: gerrit_provider.py  gitea_provider.py  gitee_provider.py  github_provider.py  gitlab_provider.py
backend/app/schemas/: admin.py  bot.py  kind.py  knowledge.py  openapi_response.py  project.py  service.py  shared_task.py  subscription.py  subtask.py  subtask_context.py  summary.py  task.py  team.py  user.py
backend/app/services/: background_chat_executor.py  correction_service.py  jobs.py  k_batch.py  kind_impl.py  oidc.py  project_service.py  shared_task.py  skill_service.py  subtask.py  user.py
backend/app/tasks/: __init__.py  subscription_tasks.py
backend/init_data/: 01-default-resources.yaml  01-public-shells.yaml  02-public-resources.yaml  README.md
backend/init_data/new_user/: 01-default-resources.yaml
backend/tests/: test_ws_decorators.py
backend/tests/api/: test_skills_api.py  test_task_services.py
backend/tests/chat_shell/: test_compression.py
backend/tests/core/: test_config.py  test_exceptions.py  test_security.py
backend/tests/models/: test_user_model.py
backend/tests/repository/: test_gerrit_provider.py  test_github_provider.py
backend/tests/services/: test_context_service.py  test_knowledge_qa_history.py  test_merge_thinking_steps.py  test_skill_service.py  test_summary_service.py  test_task_access_control.py  test_task_knowledge_base_sync.py  test_user_service.py
chat_shell/: pyproject.toml  start.sh
chat_shell/chat_shell/: agent.py  interface.py  main.py
chat_shell/chat_shell/adapters/: wegent.py
chat_shell/chat_shell/agents/: graph_builder.py
chat_shell/chat_shell/core/: config.py
chat_shell/chat_shell/history/: loader.py
chat_shell/chat_shell/models/: factory.py
chat_shell/chat_shell/prompts/: builder.py  knowledge_base.py
chat_shell/chat_shell/services/: chat_service.py  context.py
chat_shell/chat_shell/skills/: context.py  registry.py
chat_shell/chat_shell/tools/: __init__.py  base.py  events.py  knowledge_content_cleaner.py  knowledge_factory.py  knowledge_injection_strategy.py  skill_factory.py
chat_shell/tests/: test_kb_prompt_deduplication.py  test_knowledge_base_persistence.py  test_knowledge_content_cleaner.py  test_knowledge_injection_strategy.py  test_knowledge_injection_strategy_clean.py  test_prompt_modifier_tool.py
executor/: __init__.py  main.py  pyproject.toml  requirements.txt
executor/agents/: __init__.py  factory.py
executor/agents/agno/: __init__.py  agno_agent.py  config_utils.py  mcp_manager.py  member_builder.py  model_factory.py  response_processor.py  team_builder.py  thinking_step_manager.py
executor/agents/claude_code/: __init__.py  claude_code_agent.py  response_processor.py
executor/agents/dify/: dify_agent.py
executor/agents/image_validator/: image_validator_agent.py
executor/callback/: callback_client.py  callback_handler.py
executor/config/: config.py  config_loader.py
executor/envd/: QUICKSTART.md  README.md  __init__.py  generate.sh  server.py
executor/envd/api/: __init__.py  models.py  routes.py  state.py  utils.py
executor/envd/service/: __init__.py  filesystem_service.py  process_service.py
executor/mcp_servers/: __init__.py
executor/mcp_servers/wegent/: __init__.py  server.py
executor/services/: __init__.py  agent_service.py  heartbeat_service.py
executor/tasks/: __init__.py  cancel_handler.py  reader.py  resource_manager.py  status_sync.py  task_processor.py  task_state_manager.py
executor/tests/: conftest.py  test_mcp_utils.py
executor/tests/agents/: test_base.py  test_dify_agent.py  test_factory.py
executor/tools/: __init__.py  silent_exit.py
executor_manager/: README.md  README_zh.md  START_SCRIPT_USAGE.md  main.py  pyproject.toml  start.sh
executor_manager/clients/: task_api_client.py
executor_manager/common/: __init__.py  config.py  distributed_lock.py  redis_factory.py
executor_manager/config/: config.py
executor_manager/executors/: base.py  dispatcher.py
executor_manager/executors/docker/: __init__.py  binary_extractor.py  constants.py  executor.py  utils.py
executor_manager/github/: github_app.py
executor_manager/models/: __init__.py
executor_manager/routers/: e2b.py  routers.py  sandbox.py  wegent_e2b_proxy.py
executor_manager/scheduler/: scheduler.py
executor_manager/schemas/: __init__.py
executor_manager/services/: heartbeat_manager.py  task_heartbeat_manager.py
executor_manager/services/sandbox/: __init__.py  execution_runner.py  health_checker.py  manager.py  (+2 more)
executor_manager/tests/: conftest.py
executor_manager/utils/: executor_name.py
shared/: __init__.py  pyproject.toml  status.py
shared/db/: __init__.py  async_session.py
shared/telemetry/: __init__.py  config.py  instrumentation.py  providers.py
shared/utils/: crypto.py  file_util.py  http_util.py  ip_util.py  sensitive_data_masker.py  url_util.py  yaml_util.py
(+423 files in other folders)
