# SPDX-FileCopyrightText: 2025 Weibo, Inc.
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "wegent-backend"
version = "1.0.0"
description = "Wegent Backend API Service"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    # FastAPI framework and related dependencies
    "fastapi>=0.109.1",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    # Database related
    "sqlalchemy>=2.0.25",
    "pymysql>=1.1.0",
    "asyncmy>=0.2.9",
    "cryptography>=42.0.4",
    "alembic>=1.13.1",
    "mysql-connector-python>=8.3.0",
    # Authentication related
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0,<5.0.0",
    "authlib>=1.3.0",
    "pyjwt>=2.8.0",
    # HTTP clients
    "httpx[brotli,socks]>=0.26.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    # LangChain and LangGraph
    "langchain>=1.0.0,<2.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-anthropic>=1.0.0,<2.0.0",
    "langchain-google-genai>=2.0.0,<5.0.0",
    "langchain-mcp-adapters>=0.2.1",
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "pyyaml>=6.0.1",
    # Logging and monitoring
    "structlog>=23.1.0",
    # Data processing and validation
    "python-dateutil>=2.8.2",
    # XML parsing (for CAS authentication)
    "lxml>=4.9.0",
    # Path handling
    "pathlib2>=2.3.7",
    # Regular expressions
    "regex>=2023.8.8",
    # JSON processing
    "orjson>=3.9.0",
    # Caching
    "redis>=5.0.1",
    # Security related
    "pycryptodome>=3.20.0",
    # OpenTelemetry core packages
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    # OpenTelemetry instrumentation packages
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-requests>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-system-metrics>=0.48b0",
    # Document parsing for file attachments
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.2",
    "chardet>=5.0.0",
    "pillow>=12.0.0",
    "python-magic>=0.4.27",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "emoji>=2.9.0",
    "mcp>=1.0.0",
    # Task queue (Celery)
    "celery[redis]>=5.3.0",
    "flower>=2.0.0", # Celery monitoring
    # Circuit breaker pattern
    "pybreaker>=1.0.0",
    # Prometheus metrics
    "prometheus-client>=0.19.0",
    # Cron expression parsing
    "croniter>=2.0.0",
    # Web scraping with JavaScript rendering support
    "crawl4ai>=0.4.0",
    # WebSocket support
    "python-socketio>=5.10.0",
    # RAG (Retrieval-Augmented Generation) dependencies
    "llama-index-core>=0.12.0",
    "llama-index-vector-stores-elasticsearch>=0.4.0",
    "llama-index-vector-stores-qdrant>=0.9.0", # Includes qdrant-client as dependency
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-readers-file>=0.4.0",
    "docx2txt>=0.8", # Required by llama-index-readers-file for Word document parsing
    # Chat Shell (local workspace dependency for Package mode)
    "wegent-chat-shell",
    # Shared utilities (monorepo workspace dependency)
    "wegent-shared",
]

[tool.uv.sources]
wegent-chat-shell = { path = "../chat_shell", editable = true }
wegent-shared = { path = "../shared", editable = true }

[dependency-groups]
dev = [
    # Testing related
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-httpx>=0.36.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    
    # Development tools
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    
    # Documentation generation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    
    # Environment management
    "python-decouple>=3.8",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["alembic", ".venv", "venv"]
skip_gitignore = true
known_first_party = ["app", "shared", "chat_shell"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
