# SPDX-FileCopyrightText: 2025 Weibo, Inc.
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "wegent-executor"
version = "1.0.0"
description = "Wegent Task Executor Service"
readme = "BUILD.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ag-ui-protocol==0.1.8",
    "agno==2.1.5",
    "anthropic==0.67.0",
    "claude-agent-sdk==0.1.13",
    "cryptography==46.0.3",
    "fastapi==0.109.1",
    "gitpython==3.1.43",
    "google-genai==1.55.0",
    "httpx==0.28.1",
    "mcp==1.12.4",
    "openai==1.107.1",
    "pydantic==2.11.2",
    "pymysql==1.1.0",
    "requests==2.31.0",
    "sqlalchemy==2.0.43",
    "uvicorn==0.25.0",

    # envd Connect RPC dependencies
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.29.5,<7.0.0",
    "watchdog==4.0.0",
    "psutil>=5.9.0",

    # OpenTelemetry core packages
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",

    # OpenTelemetry instrumentation packages
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-requests>=0.48b0",
    "opentelemetry-instrumentation-system-metrics>=0.48b0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-httpx>=0.36.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", "venv"]
skip_gitignore = true
known_first_party = ["agents", "callback", "code_server", "config", "envd", "services", "tasks", "utils", "shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"